add style and content

--- a/FE21-HTML5-CSS--Cornelia-Bettina/newspaper.html
+++ b/FE21-HTML5-CSS--Cornelia-Bettina/newspaper.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h3 {
+            background-color: green;
+            color: brown;
+        }
+    </style>
+    <link rel="stylesheet" type="text/css" href="newspaper.css">
 </head>
 <body>
-    <h1 style="background color: green; font style: italic;">Revenge Of The Trees!</h1>
+    <h1 style="color: green; font-style: italic;">Revenge Of The Trees!</h1>
     <h3>Cornelia Röhrer and Bettina Körbler</h3>
     <p>Ents, also known as Onodrim (Tree-host) by the by the Elves were a very old race
          of Middle Earth</p>
