--- a/FE21-HTML5-CSS--Cornelia-Bettina/newspaper.html
+++ b/FE21-HTML5-CSS--Cornelia-Bettina/newspaper.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="newspaper.css">
     <style>
         h3 {
-            background-color: green;
+            background-color:#bab86c;
             color: brown;
         }
     </style>
-    <link rel="stylesheet" type="text/css" href="newspaper.css">
+    
 </head>
 <body>
     <h1 style="color: green; font-style: italic;">Revenge Of The Trees!</h1>
