--- a/FE21-HTML5-CSS--Cornelia-Bettina/advancedex.html
+++ b/FE21-HTML5-CSS--Cornelia-Bettina/advancedex.html
@@ -5,18 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="header.css" type="text/css">
+    <link rel="stylesheet" href="sidebar.css" type="text/css">
+    <link rel="stylesheet" href="generalhtml.css" type="text/css">
+    <link rel="stylesheet" href="article.css" type="text/css">
+    <link rel="stylesheet" href="footer.css" type="text/css">
 </head>
 <body>
     <!-- This is the sidebar -->
     <div class="sidebar">
-        <h3 class="sidebarItem">Menu</h3>
+        <h3 class="sidebarItemButton">Menu</h3>
         <a href="#" class="sidebarItemButton">Apple Tree</a>
         <a href="#" class="sidebarItemButton">Cherry Tree</a>
         <a href="#" class="sidebarItemButton">Palm Tree</a>
       </div>
     <!-- rest of the page content -->
-    <h1>You would not believe what trees can do!</h1>
-    <article>
+    <h1 class="general" id="header">You would not believe what trees can do!</h1>
+    <article class="general">
         <h1>Revenge Of The Trees!</h1>
         <h3>Cornelia Röhrer and Bettina Körbler</h3>
         <p>Ents, also known as Onodrim (Tree-host) by the by the Elves were a very old race
@@ -24,9 +29,8 @@
         <p>Tree, woody plant that regularly renews its growth. Most plants classified as trees have
         a single self supporting trunk.</p>
     </article>
-    <footer>
-        <p>copyright Betty and Lia</p>
-        <p>contact</p>
+    <footer class="general">
+        <p>copyright Betty and Lia <span>contact</span></p>
     </footer>
 </body>
 </html>
