changed sidebar tag

--- a/FE21-HTML5-CSS--Cornelia-Bettina/advancedex.html
+++ b/FE21-HTML5-CSS--Cornelia-Bettina/advancedex.html
@@ -13,12 +13,14 @@
 </head>
 <body>
     <!-- This is the sidebar -->
+    <aside>
     <div class="sidebar">
         <h3 class="sidebarItemButton">Menu</h3>
         <a href="#" class="sidebarItemButton">Apple Tree</a>
         <a href="#" class="sidebarItemButton">Cherry Tree</a>
         <a href="#" class="sidebarItemButton">Palm Tree</a>
       </div>
+    </aside>
     <!-- rest of the page content -->
     <h1 class="general" id="header">You would not believe what trees can do!</h1>
     <article class="general">
