--- a/FE21-HTML5-CSS--Cornelia-Bettina/intermediate-ex.html
+++ b/FE21-HTML5-CSS--Cornelia-Bettina/intermediate-ex.html
@@ -5,17 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1 {
+            text-align: center;
+            font-size: 50px;
+        }
+        #CatPicture {
+            position: absolute;
+            clip: rect(60px,0x,20px,60x);
+        }
+    </style>
 </head>
 <body>
     <header>
         <h1>Coding Center</h1>
-        <img src="https://images.pexels.com/photos/4929241/pexels-photo-4929241.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"> 
+        <img id="CatPicture" src="https://images.pexels.com/photos/4929241/pexels-photo-4929241.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"> 
+        <nav>
+            <a href="ContactUs.html">Contact Us</a>
+            <a href="Home.html">Home</a>
+            <a href="About.html">About Us</a>
+            </nav>
     </header>
-   <ul>
-   <li><a href="ContactUs.html">Contact Us</a></li>
-   <li><a href="Home.html">Home</a></li>
-   <li><a href="About.html">About Us</a></li>
-</ul>
+  
 <figure>
     <img src="https://images.pexels.com/photos/6084453/pexels-photo-6084453.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
     <figcaption>Women sitting in the woods working on her computer</figcaption>
